Fix #2: word-wrap long code lines

--- a/_sass/post/_code-snippets.sass
+++ b/_sass/post/_code-snippets.sass
@@ -89,6 +89,14 @@
     -moz-border-radius-bottomright: $corner-radius
     border-top-right-radius: $corner-radius
     border-bottom-right-radius: $corner-radius
+
+    //Word-wrap long lines
+    white-space: pre-wrap
+    white-space: -moz-pre-wrap
+    white-space: -pre-wrap
+    white-space: -o-pre-wrap
+    word-wrap: break-word
+
     // Reset <code> cause we changed it before
     code
       background-color: transparent
